--- a/mod2_solution/index.html
+++ b/mod2_solution/index.html
@@ -1,100 +1,46 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Coursea</title>
-    <style media="screen">
-      body{
-        background-color:black;
-        color:white;
-      }
-      @media only screen and (orientation: landscape)
-      {
-      h2{
-        text-align:center;
-      }
-      .first {
-        float:left;
-        background-color: gray;
-        color: white;
-        width: 30%;
-        height: 16em;
-        padding:5px;
-        margin:2px;
-        border:5px solid white;
-        text-align:left;
-        overflow:auto;
-      }
-      .heading{
-        text-align:center;
-        background-color: red;
-        color: white;
-        width: 5em;
-        padding:5px;
-        margin-right:0px;
-        margin-top:0px;
-        border:5px solid white;
-      }
-    }
-    @media only screen and (orientation: portrait)
-    {
-      h2{
-        text-align:center;
-      }
-      .first {
-        background-color: gray;
-        color: white;
-        width: 30%;
-        height: 16em;
-        padding:5px;
-        margin:2px;
-        border:5px solid white;
-        text-align:left;
-        overflow:auto;
-      }
-      .heading{
-        text-align:center;
-        background-color: red;
-        color: white;
-        width: 5em;
-        padding:5px;
-        margin-right:0px;
-        margin-top:0px;
-        border:5px solid white;
-      }
-    }
-    </style>
-  </head>
-  <body>
-    <h2>OUR MENU</h2>
-    <div class="first">
-      <h3 class = "heading">first<h3>
-        <p>
-      The implementation of the page you will be creating should
-      follow the mockup illustrations shown below. You are provided
-       3 mockups: desktop, tablet, and mobile. Your implementation
-       has to be JUST 1 page, NOT 3 pages. In other words, you will
-       be creating a single, responsive page.
-       </p>
-    </div>
-    <div class="first">
-      <h3 class = "heading">second<h3>
-        <p>
-      Layout: In the tablet view (between 768px and 991px, inclusively),
-      the first 2 sections should be in the first row and be of equal size.
-       The 3rd section should be in the second row and take up the entire
-       row by itself. For a visual reference of this view, see the tablet
-       mockup illustration below.
-       </p>
-    </div>
-    <div class="first">
-      <h3 class = "heading">third<h3>
-        <p>
-      Spacing: Pay attention to the spacing shown in the mockup illustrations.
-      Note the spacing between sections (both horizontal and vertical). Note
-      the horizontal spacing between the edges of the section and the edges of
-      the browser window. Also, note the spacing between the dummy text in each
-      section and the edges of the.
-    </div>
-  </body>
+<html>
+<head>
+	<meta charset="utf-8">
+
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<title>Module 2 Solution</title>
+</head>
+<body>
+	<h1>Our Menu</h1>
+	<div class="row">
+	<div class="container col-lg-4 col-md-6 col-sm-12">
+		<section>
+		<div id="chicken">
+			Chicken
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+	</div>
+	<div class="container col-lg-4 col-md-6 col-sm-12">
+		<section>
+		<div id="beef">
+			Beef
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+	</div>
+	<div class="container col-lg-4 col-md-12 col-sm-12">
+		<section>
+		<div id="sushi">
+			Sushi
+		</div>
+		<p>
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tristique ipsum sit amet nunc posuere, at dictum massa fermentum. Sed tempor turpis quis dui pharetra, eu suscipit elit cursus. Praesent sed libero turpis. Aliquam varius elit mauris, vestibulum laoreet leo rhoncus ac. Fusce at facilisis velit. Vivamus facilisis semper risus, et efficitur justo suscipit ac. 
+		</p>
+		</section>
+	</div>
+	</div>
+</body>
 </html>
