--- a/Anjularjs/coursera/index.html
+++ b/Anjularjs/coursera/index.html
@@ -12,7 +12,7 @@
 	{{name}}<br>
 	<div>
 	<button ng-click="hello()">Check If Too Much</button><br>
-	{{hello()}}
+	{{message}}
 </div>
 	</div>
 </body>
